Updated investor page and style

--- a/Invest.html
+++ b/Invest.html
@@ -2,14 +2,32 @@
 <head style = "color:blue">
     <link rel='stylesheet' href='style.css'>
     <title>Invest Now in SGMS! </title>
-    <img src='images/HGSAPlayer.jpg'>
+    
 </head>
 <body style = "color:blue">
     <h1>Softball Game Management System</h1>
     <!-- subtitle -->
     <h2><em> Scorekeeping App </em></h2>
 
+    <h3>
+        2024 is predicted to be the year that the global women's sports industry finally
+        <a href=https://www.nielsen.com/insights/2024/whats-next-for-womens-sports-fueling-growth-proving-value/ target="_blank">breaks the $1 billion barrier</a>
+        , a 300% increase from 2021. 
+
+        Investing in SGMS is an investment in athletics for girls.  <br />
+        The model will allow for team sponsors to pay for an annual subscription fee for the app. <br />
+        In exchange their sponsorship information will be made available for the league.   <br />
+        Invest today in our app development phase 2!
+    </h3>
+
+    <div>
+    <img src='images/women_sports.jpg' alt="Forest" style="center">
+    </div>
+      
+    <a class="next" href=file:///C:/Users/htmartin/CS100D/CS100D/aboutme.html >Meet The Amazing Team &raquo;</a>
     <a href=file:///C:/Users/htmartin/CS100D/CS100D/softball.html class="previous">&laquo; Back to SGMS</a>
 
-    <h5>Register Today at: <a href=https://www.hgsa.net/ target="_blank">Hillsboro Girls Softball Association</a></h6>
+    <h5>Register Today at: <a href=https://www.hgsa.net/ target="_blank">Hillsboro Girls Softball Association</a></h5>
 </body>
+
+
