--- a/aboutme.html
+++ b/aboutme.html
@@ -14,8 +14,9 @@
               <p class = "meetpara"> Hilary Martin has worked at Intel in Technology Development for 24 years.
 
                 She is learning full stack software development to better support the team she currently manages.
-                She has worn many hats including Industrial Engineer, Systems Analyst, Scrum Master, Product Owner. 
-                But one hat she really enjoys wearing is that of the U10 Emerald Dragons Softball team as the coach. <br>
+                In her career, she has worn many hats including Industrial Engineer, Systems Analyst, Scrum Master, Product Owner. 
+               The hat Hilary enjoys wearing most is that of the U10 Emerald Dragons Softball team when coaching the team to victory. <br> 
+                <br>
                <i>Hilary frequently forgets the team scorebook and paper roster rushing to games and really wishes she had an app.&#128514; </i>
 
               </p>
