--- a/hansel_gretel.html
+++ b/hansel_gretel.html
@@ -4,7 +4,7 @@
 </head>
 <body style = "color:blue">
     <h1>HANSEL AND GRETEL</h1>
-    <img src='Hansel_gretel.jpg' style='width:300px;height:400px'>
+    <img src='Images/Hansel_gretel.jpg' style='width:300px;height:400px'>
     <hr />
     <!-- subtitle -->
     or, <b>The Forest</b>
