--- a/cinderella.html
+++ b/cinderella.html
@@ -9,7 +9,7 @@
     or, <b>The Little Glass Slipper</b>
     <h2>Chapter 1</h2>
     <hr />
-    <img src='Cinderella.jpg' style='width:300px;height:187px'>
+    <img src='images/Cinderella.jpg' style='width:300px;height:187px'>
     <hr />
     <p class = "firstpara">
         There lived once a gentleman who married for his second wife <br />
